Convert last test methods: now 17/20 enabled